--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 			<header id="title"> 
 				<h1><a href="{{site.url}}">{{site.title}}</a></h1>
 			</header>
-            <nav id="menu">
+            <nav id="nav">
                 <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/read">Read</a></span>
                 <span{% if page.photo %} class="current"{% endif %}><a href="{{site.url}}/photo">Photo</a></span>
                 <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/tags">Tags</a></span>
