--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
                 <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/read">Read</a></span>
                 <span{% if page.photo %} class="current"{% endif %}><a href="{{site.url}}/photo">Photo</a></span>
                 <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/tags">Tags</a></span>
+                <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/guestbook">Guestbook</a></span>
                 <span{% if page.about %} class="current"{% endif %}><a href="{{site.url}}/about">About</a></span>
             </nav>
 			<div class="clear"></div>
