--- a/_includes/page.html
+++ b/_includes/page.html
@@ -1,7 +1,11 @@
-		<section id="content" class="page">
-			<article class="post">
-			 <div class="con">{{ content }}</div>
-			</article>
-			<div class="clear"></div>
-		</section>
-		<div class="clear"></div>
+<section id="content" class="page">
+    <article class="post">
+        <div class="con">
+            {{ content }}
+            {% if page.comments %}
+                {% include comments.html %}
+            {% endif %}
+        </div>
+    </article>
+</section>
+<div class="clear"></div>
