--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1076,6 +1076,13 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
     padding-bottom: 10px !important;
     margin-top: 5px !important;
 }
+
+.page img{
+    max-width:800px !important;
+    padding:0px !important;
+    box-shadow: 2px 2px 2px #000 !important;
+}
+
 .tag_list {
     float: left;
     position: relative;
@@ -1144,34 +1151,6 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
     color:#666;
     margin-left:10px;
     font-size: 12px;
-}
-
-.download {
-    margin:10px 0px;
-    padding:15px 15px 15px 70px;
-    font-size:12px;
-    -moz-box-shadow:0px 1px 2px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow:0px 1px 2px rgba(0, 0, 0, 0.1);
-    box-shadow:0px 1px 2px rgba(0, 0, 0, 0.1);
-    border-radius:5px;
-    -webkit-border-radius:5px;
-    -moz-border-radius:5px;
-    -khtml-border-radius:5px;
-    border:1px solid #ddd;
-    color:#999;
-}
-
-.download a {
-    color:#CC4F27 !important;
-}
-
-.download b,{
-    padding:0px;
-    margin:0px;
-    background:none;
-    font-weight:bold;
-    border-radius:0px;
-    -moz-border-radius:0px;
 }
 
 .douban-list ul li {
