--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="{{site.seo.keywords}}" />
         <meta name="description" content="{{site.seo.description}}" />
         <link rel="shortcut icon" href="{{site.url}}/media/img/favicon.ico" />
-        <link rel="alternate" title="likebeta" type="application/atom+xml" href="{{site.feed}}" />
+        <link rel="alternate" title="popfeng" type="application/atom+xml" href="{{site.feed}}" />
         <link rel="stylesheet" type="text/css" href="{{site.url}}/media/css/style.css" />
         <title>{{site.title}} - Where The Trail Ends</title>
         <!--[if lt IE 9]>
