--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="author" content="{{site.author.name}}" />
-        <meta name="keywords" content="{{page.keywords}}" />
-        <meta name="description" content="{{page.description}}" />
+        <meta name="keywords" content="{{site.seo.keywords}}" />
+        <meta name="description" content="{{site.seo.description}}" />
         <link rel="shortcut icon" href="{{site.url}}/media/img/favicon.ico" />
         <link rel="alternate" title="popfeng" type="application/atom+xml" href="{{site.feed}}" />
         <link rel="stylesheet" type="text/css" href="{{site.url}}/media/css/style.css" />
