--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
 				<h1><a href="{{site.url}}">{{site.title}}</a></h1>
 			</header>
             <nav id="nav">
-                <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/read">Read</a></span>
-                <span{% if page.photo %} class="current"{% endif %}><a href="{{site.url}}/photo">Photo</a></span>
-                <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/tags">Tags</a></span>
-                <span{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/guestbook">Guestbook</a></span>
-                <span{% if page.about %} class="current"{% endif %}><a href="{{site.url}}/about">About</a></span>
+                <span><a href="{{site.url}}/read">Read</a></span>
+                <span><a href="{{site.url}}/photo">Photo</a></span>
+                <span><a href="{{site.url}}/tags">Tags</a></span>
+                <span><a href="{{site.url}}/guestbook">Guestbook</a></span>
+                <span><a href="{{site.url}}/about">About</a></span>
             </nav>
 			<div class="clear"></div>
 		</div>
