--- a/media/css/style.css
+++ b/media/css/style.css
@@ -31,26 +31,13 @@
     background-color: #55bbee;
     text-shadow:none;
 }
+
 * {
     margin:0;
     padding:0;
 }
-img {
-    border:0;
-}
-input {
-    outline:none;
-}
-
-textarea {
-    outline:none;
-}
-
-.clear {
-    clear:both;
-}
-
 body {
+    background:#ffffff;
     line-height:180%;
     font-size:12px;
     font-family:'Microsoft Yahei',Verdana,Arial,Helvetica,sans-serif;
@@ -58,46 +45,52 @@ body {
     color:#333;
     margin:0;
 }
-
-body,.hover {
-    background:#ffffff;
-}
-.current a {
-    color:#3399cc;
-}
-
 div,form,img,ul,ol,li,dl,dt,dd {
     border:0;
     text-align:left;
     margin:0;
     padding:0;
 }
-
 h1,h2,h3,h4,h5,h6 {
     font-weight:400;
     margin:0 auto;
     padding:0;
 }
-
+h2 {
+    margin:0 0 20px 0;
+}
 table,td,tr,th {
     font-size:12px;
 }
-
-li {
+ul,li {
     list-style-type:none;
+    list-style:none;
 }
-.hover{
-    position:absolute;
-    width:80px;
-    display:block;
-    left:45px;
-    top:17px;
+input,textarea {
+    outline:none;
 }
-.clear {
-    clear:both;
+form,embed {
+    display:inline;
+    margin:0;
+    padding:0;
 }
-
-blockquote,.archivetitle{
+img {
+    border:0;
+}
+a {
+    color:#3399cc;
+    text-decoration:none;
+}
+a:hover {
+    color:#3399cc;
+}
+hr {
+    width: 10em;
+    border: none;
+    border-top: 1px dashed #d0d0d0;
+    border-bottom: 1px dashed #f9f9f9;
+}
+blockquote{
     background-color: #e2e2e2;
     padding: 0.5em 1em;;
     border-radius: 3px 3px 3px 3px;
@@ -109,35 +102,27 @@ blockquote,.archivetitle{
     border: 1px solid #ccc;
     border-left: 0.4em solid #bbb;
 }
+code {
+    display: block;
+    padding: 0.5em 1em;
+    margin: 1em 0;
+    border: 1px solid #CCCCCC;
+    border-radius: 3px;
+    background-color: #E2E2E2;
+    font-family: Consolas,Menlo,Monaco,monospace,"Lucida Console","Liberation Mono","DejaVu Sans Mono","Bitstream Vera Sans Mono","Courier New";
+    line-height: 18px;
+    white-space:pre-wrap;
+    word-wrap:break-word
+}
 
 blockquote code{
     margin:0;
     border:0;
 }
 
-h2.archivetitle{
-    margin:0 0 20px 0;
+.clear {
+    clear:both;
 }
-
-ul,li {
-    list-style:none;
-}
-
-a {
-    color:#3399cc;
-    text-decoration:none;
-}
-
-a:hover {
-    color:#3399cc;
-}
-
-form,embed {
-    display:inline;
-    margin:0;
-    padding:0;
-}
-
 #wrap {
     position:relative;
     table-layout:fixed;
@@ -149,19 +134,16 @@ form,embed {
     padding:0 5px 0 5px;
 
 }
-
 #bottombar {
     height:120px;
     margin-top:-200px;
 }
-
 #header {
     margin:40px 20px 0 20px;
     padding:0 0 20px 0;
     border-bottom:1px solid #ddd;
     height:46px;
 }
-
 #title h1 a{
     color:#3399cc;
     font-size:52px;
@@ -169,11 +151,9 @@ form,embed {
     font-family:'Comic Sans MS','Microsoft Yahei';
     overflow:hidden;
 }
-
 #title h1 a:hover{
     color:#55bbee;
 }
-
 #nav {
     float:left;
     width:9em;
@@ -183,64 +163,31 @@ form,embed {
     text-transform:uppercase;
     font-family: 'Electrolize',sans-serif;
 }
-
 #nav a{
     display:block;
     padding:.7em 1em;
     color: black;
 }
-
 #nav a:hover{
     background-color:#ff0000;
     text-decoration:none;
     color:#f9f9f9;
     -webkit-transition:color .2s linear;
 }
-
-.head-search input{
-    padding:5px 5px 5px 30px;
-    border:1px solid #CBCBCB;
-    line-height:16px;
-    box-shadow:0 1px 3px rgba(0,0,0,0.1) inset;
-    -moz-box-shadow:0 1px 3px rgba(0,0,0,0.1) inset;
-    -webkit-box-shadow:0 1px 3px rgba(0,0,0,0.1) inset;
-    -o-box-shadow:0 1px 3px rgba(0,0,0,0.1) inset;
-    border-radius:25px;
-    -moz-border-radius:25px;
-    -webkit-border-radius:25px;
-    -o-border-radius:25px;
-    width:197px;
-}
-
 #content {
     float:left;
     padding:0 20px 0 20px;
     margin-top:25px;
 }
-
-.sidebar {
-    float:right;
-    width:266px;
-    overflow:hidden;
-    margin-top:22px;
-}
-
-.sidebar-fixed {
-    width:265px;
-    float:right;
-    border-left:1px solid #DDD;
-}
 .post {
     clear:both;
     position:relative;
 }
-
 .postunder {
     clear:both;
     position:relative;
     margin:10px 0 10px;
 }
-
 .date {
     color:#333333;
     text-transform:uppercase;
@@ -261,7 +208,6 @@ form,embed {
     color:#3399cc;
     font-weight:800;
 }
-
 .post .date .month {
     font-size:12px;
     position:relative;
@@ -304,17 +250,14 @@ form,embed {
     border-left:solid 5px #3399cc;
     padding-left:15px;
 }
-
 .post .blue {
     font-family:'Courier New','Microsoft Yahei',Helvetica, sans-serif;
     white-space:pre-wrap;
     background-color:#eaf7ff;
 }
-
 .post .con ul {
     margin: 5px 0;
 }
-
 .post .con li {
     list-style-type:none;
     min-height:20px;
@@ -322,29 +265,25 @@ form,embed {
     padding:4px 0px;
     margin-left:1.1em;
 }
-
 .post .con ul li {
     list-style:disc inside;
 }
-
 .post .con ol li {
     list-style:decimal inside;
 }
-
 .page .post .con ul li {
     list-style:none;
 }
-
 .page .post .con ol li {
     list-style:none;
 }
 .post .con .oddli {
+    padding:6px 10px;
     -webkit-transition:background .3s linear;
     -moz-transition:background .3s linear;
     -o-transition:background .3s linear;
     transition:background .3s linear;
 }
-
 .post .info {
     line-height:22px;
     padding:10px 0 0 10px;
@@ -352,36 +291,11 @@ form,embed {
     text-transform:uppercase;
     float:right;
 }
-
-.tags {
-    overflow:auto;
-    line-height:20px;
-}
-
-.tags a {
-    color:#999999;
-    padding-right:9px;
-    font-size:12px;
-    white-space:nowrap;
-}
-
-.tags a:hover {
-    color:#dd1144;
-}
-
-.bicolumn ul li {
-    text-transform:uppercase;
-}
-
 .post .pageinfo {
     height:4px;
     margin-top:12px;
     position:relative;
     padding:2px 0 0;
-}
-
-.post .info span a {
-    color:#666;
 }
 
 .post .intro {
@@ -393,11 +307,6 @@ form,embed {
     text-align:justify;
     text-justify:inter-ideograph;
     padding:5px 0;
-}
-
-.post p.read-more {
-    padding-left:17px;
-    font-size:12px;
 }
 
 .post .intro p img {
@@ -419,30 +328,10 @@ form,embed {
     border:solid 1px #ddd;
 }
 
-.post .con .about-img{
-    vertical-align: middle;
-    margin-right: 5px;
-    width: 16px;
-    height: 16px;
-}
-
-.imgtitle {
-    position:absolute;
-    margin:-41px 0 0 12px;
-    color:/*#11648A*/
-    #fff;
-    font-size:11px;
-}
-
-.imgtitle em {
-    font-style:normal;
-}
-
 .post .con p {
     text-align:justify;
     text-justify:inter-ideograph;
     padding:8px 0;
-    /*text-indent:2em;*/
 }
 .post .con div p {
     text-align:justify;
@@ -457,196 +346,13 @@ form,embed {
     color:#3399cc;
     text-decoration:none;
 }
+
 .post .con p.more a {
     margin:0;
 }
+
 .post .con p a:hover {
     text-decoration:underline;
-}
-
-code{
-    /*margin: 0px 3px;
-    padding: 3px 6px;*/
-margin: 0 0.5em;
-padding: 0.1em 0.5em;
-white-space: nowrap;
-border: 1px solid #CCCCCC;
-background-color: #E2E2E2;
-border-radius: 3px;
-}
-.post .con pre code {
-    display: block;
-    padding: 0.5em 1em;
-    margin: 1em 0;
-    border: 1px solid #CCCCCC;
-    background: #E2E2E2;
-    font-family: Consolas,Menlo,Monaco,"Lucida Console","Liberation Mono","DejaVu Sans Mono","Bitstream Vera Sans Mono","Courier New",monospace,serif;
-    /*overflow: auto;
-    max-height: 500px;*/
-line-height: 18px;
-white-space:pre-wrap;
-word-wrap:break-word
-}
-
-ol.page-navigator {
-    color:#666;
-    list-style:none;
-    font-size:12px;
-    line-height:30px;
-    font-family:"Lucida Grande",Verdana,"Bitstream Vera Sans",Arial,sans-serif;
-    margin:-10px auto 0 auto;
-    text-align: center;
-}
-#comments ol.page-navigator {
-    float:right;
-    margin-top:-31px;
-    height:20px;
-}
-ol.page-navigator li {
-    display:inline;
-    margin:0 5px 0 0;
-}
-#comments ol.page-navigator li{
-    margin:0 0 0 5px;
-}
-ol.page-navigator li a {
-    text-decoration:none;
-    padding:5px 9px;
-}
-
-ol.page-navigator li.current a {
-    border-bottom:3px #3399cc solid;
-}
-
-ol.page-navigator li a:hover {
-    border-bottom:3px #3399cc solid;
-}
-
-.under {
-    clear:both;
-    border:1px #ddd dashed;
-    font-size:12px;
-    margin:10px 0;
-    padding:5px 10px;
-}
-
-.under a {
-    color:#616161;
-}
-
-#postnavi {
-    overflow:hidden;
-    margin:0 0 20px;
-}
-
-#postnavi .next {
-    float:right;
-}
-
-.related {
-    margin:10px 10px 0 15px;
-}
-
-.related h4 {
-    height:25px;
-    line-height:25px;
-    border-bottom:1px #d0d4c8 solid;
-    font-size:12px;
-    padding-left:10px;
-    background:#f0f7e2;
-}
-
-.related ul {
-    padding:5px 0;
-}
-
-.related li {
-    height:25px;
-    line-height:25px;
-    border-bottom:1px #d0d4c8 dashed;
-    padding-left:15px;
-}
-
-.related li span {
-    float:right;
-    font-size:11px;
-    color:#999;
-}
-
-.block {
-    margin:0 0 10px 10px;
-    padding:0 0 0 12px;
-    display:block;
-    zoom:1;
-    overflow:hidden;
-}
-
-.sidebar .block h3 {
-    color:#3399cc;
-    text-shadow:#fff 2px 2px 0;
-    height:25px;
-    line-height:25px;
-    font-size:14px;
-    padding-left:5px;
-}
-
-.sidebar .block li {
-}
-
-.sidebar .block li.rc_item {
-    background:none;
-    display:inline-block;
-    border-bottom:1px #d0d4c8 dashed;
-    margin-bottom:5px;
-    padding:0 0 5px;
-}
-
-.sidebar .block.feed_form ul {
-    display:inline-block;
-    padding:5px;
-}
-
-.sidebar .block.feed_form li {
-    float:left;
-    margin-right:5px;
-    background:none;
-    padding:0;
-}
-
-.sidebar .block.comment div{
-    display:inline;
-}
-.sidebar .block.comment li{
-    width:284px;
-    height:21px;
-    overflow:hidden;
-}
-.sidebar .block.comment li span {
-    padding:0 8px 0 0;
-}
-
-.sidebar .bicolumn ul li {
-    float:left;
-    width:64px;
-}
-.sidebar .links ul,.sidebar .block-s ul {
-    margin-right:-30px;
-    overflow:auto;
-}
-.sidebar .links ul li{
-    float:left;
-    width:104px;
-    margin-right:20px;
-    border-bottom:1px dashed #AAA;
-}
-.sidebar .block-s ul li {
-    margin-right:19px;
-    border-bottom:1px dashed #AAA;
-}
-.block-s {
-    max-height:120px;
-    overflow:hidden;
-    margin-right:-30px;
 }
 
 #footer {
@@ -669,9 +375,6 @@ ol.page-navigator li a:hover {
 .foot{
     position:relative;
     margin:0 auto;
-}
-
-.foot {
     border-top:1px #E3E3E3 solid;
 }
 
@@ -681,20 +384,20 @@ ol.page-navigator li a:hover {
     padding-top:8px;
 }
 
-#errorbox {
-    margin:10px 80px 10px 85px;
+.tags {
+    overflow:auto;
+    line-height:20px;
 }
 
-.post .con .oddli {
-    padding:6px 10px;
+.tags a {
+    color:#999999;
+    padding-right:9px;
+    font-size:12px;
+    white-space:nowrap;
 }
 
-#comment_form {
-    display: block;
-    padding:20px 10px 0 0;
-    padding-right:200px;
-    overflow:hidden;
-    position:relative;
+.tags a:hover {
+    color:#dd1144;
 }
 
 .col2,.col1 {
@@ -716,22 +419,6 @@ ol.page-navigator li a:hover {
     float:left;
     position: relative;
     background-position:0 0;
-}
-#comment_form textarea {
-    width:95%;
-    height:124px;
-    padding:10px;
-    overflow:auto;
-    margin:0;
-    line-height:17px;
-    font-family:Verdana,'Microsoft Yahei',Arial,Helvetica,sans-serif;
-    color:#222;
-    +height:102px;
-    +width:88%;
-}
-
-.comments ol li {
-    margin:0 0 1em;
 }
 
 input#author,input#mail,input#url,textarea#comment {
@@ -783,7 +470,6 @@ div.comment-box {
 ol.comment-list li .comment-reply {
     float:right;
 }
-
 ol.comment-list li .comment-reply a {
     font-size:11px;
     border:none;
@@ -795,110 +481,11 @@ ol.comment-list li .comment-reply a {
 .comment-reply a {
     margin-top:-200px;
 }
-
 .comment-meta {
     padding:0 0 0 65px;
     color:#999;
     font-size:12px;
 }
-.avatar {
-    background:#fff;
-    padding:1px;
-    border:1px #ddd solid;
-}
-.comment-author {
-    float: left;
-    display:block;
-    text-align:center;
-    margin:5px 0 0 0;
-    width:48px;
-}
-
-.fn a{
-    color:#3399cc;
-    height:16px;
-    overflow:hidden;
-}
-.fn a:hover{
-    color:#555;
-}
-cite.fn{
-    font-style:normal;
-    font-size:12px;
-    color: #3399cc;
-    padding-right:7px;
-}
-
-#comment_form textarea ,input#author,input#mail,input#url,textarea#comment,.post .con .oddli {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    border: solid 1px #E8E8E8;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -o-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -khtml-border-radius: 4px;
-    border-radius: 4px;
-    background:#F9F9F9;
-    -moz-box-shadow: 1px 1px 0 rgba(255,255,255,0.5);
-    -webkit-box-shadow: 1px 1px 0 rgba(255,255,255,0.5);
-    -o-box-shadow: 1px 1px 0 rgba(255,255,255,0.5);
-    box-shadow: 1px 1px 0 rgba(255,255,255,0.5);
-}
-.comment-parent{
-    border-top: solid 1px #E8E8E8;
-}
-.comment-child{
-    border-top: solid 1px #E8E8E8;
-}
-.comment-p {
-    margin-left:64px;
-    overflow:hidden;
-    padding:3px 0 10px 0;
-    position:relative;
-}
-
-.post .con .oddli {
-    padding:6px 10px;
-}
-
-ol.comment-list li .respond {
-    padding:5px 0;
-}
-
-.respond .cancel-comment-reply a{
-    height: 22px;
-    display: block;
-    float: right;
-    border:none;
-    color:#aaa;
-    font-size:12px;
-}
-
-#comment_form label {
-    float:left;
-    position:absolute;
-    margin:0 0 0 10px;
-    color:#555;
-    font-size: 12px;
-    margin-top:3px;
-    display:block;
-}
-
-#comment_form label .required {
-    color:#C04E37;
-}
-
-#comment_form .text {
-    width:100%;
-}
-
-#comment_form p {
-    margin-bottom:8px;
-}
-
 .submit {
     font-size:12px;
     width:100%;
@@ -921,37 +508,16 @@ ol.comment-list li .respond {
     -khtml-border-radius: 4px;
     border-radius: 4px;
 }
-
 .submit:hover {
     color:white;
     background:#DC2509;
 }
-
-.form .go,.display-none {
+.form .go {
     display:none;
 }
-
-.navigation .nav-previous,#postnavi .prev {
+.navigation .nav-previous {
     float:left;
 }
-
-.post .con,.lab {
-    line-height:1.8;
-    font-size:14px;
-}
-
-.sidebar .block ul,.sidebar .block.categories ul,.sidebar .block#tag_cloud p {
-    padding:5px;
-}
-
-.sidebar .block.comment li a,#respond #commentform p {
-    padding:0;
-}
-
-ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover {
-    color:#444;
-}
-
 .div-line{
     border-bottom:1px solid #DDD;
     height:1px;
@@ -964,36 +530,6 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
     border-left:solid 5px #3399cc;
     padding-left:15px;
 }
-.rc-item {
-    padding: 2px 0;
-}
-.rc-item .rc-info,
-.rc-item .rc-excerpt {
-    margin-top: -2px;
-    margin-left: 44px;
-}
-.rc-item .rc-timestamp {
-    margin-left: 8px;
-    font-size: 10px;
-    color: #999;
-}
-.rc-item .avatar{
-    display: inline;
-    float: left;
-}
-.post .douban{
-
-}
-.post .douban li {
-    list-style:none outside none;
-    float:left;
-    width:80px;
-    padding: 0;
-}
-.post .douban li img{
-    width: 70px;
-    height: 100px;
-}
 .post .wall {
     line-height:18px;
     overflow:hidden;
@@ -1005,7 +541,6 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
     width:178px;
     padding: 0;
 }
-
 .post .wall li a {
     border:1px solid #CBCBCB;
     border-radius:2px 2px 2px 2px;
@@ -1023,7 +558,6 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
     background-color:#F7F7F7;
     background-image:0;
 }
-
 .post .wall li a:hover,
 .post .wall li strong:hover {
     color:#47AFD5;
@@ -1069,66 +603,10 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
     padding-bottom: 10px !important;
     margin-top: 5px !important;
 }
-
 .page img{
     max-width:800px !important;
     padding:0px !important;
     box-shadow: 2px 2px 2px #000 !important;
-}
-
-.tag_list {
-    float: left;
-    position: relative;
-    width: 523px;
-}
-
-.tag_list ul li a {
-    color: #3399cc;
-    padding-left: 1em;
-}
-
-.tag_cloud {
-    float: right;
-    position: relative;
-    margin: 0 12px 0 0;
-    width: 240px;
-}
-
-.tag_cloud a:hover {
-    color:#333333;
-}
-
-.page-bg {
-    background: none repeat scroll 0 0 #CC4F27;
-    color: white;
-    display: inline;
-    font-family: 'Passion One',impact,Verdana,Arial,Helvetica,sans-serif;
-    font-size: 32px;
-    height: 30px;
-    letter-spacing: 3px;
-    line-height: 30px;
-    padding: 3px 88px 3px 20px;
-    position: absolute;
-    right: 0;
-    top: 169px;
-    z-index: 2;
-}
-
-#header-comments {
-    position:relative;
-    margin:5px 20px 0 20px;
-    padding:0 0 5px 0;
-    border-bottom:1px solid #ddd;
-}
-
-#header-comments ul{
-    overflow: hidden;
-    float: left;
-}
-
-#header-comments ul li{
-    float: left;
-    list-style: none;
 }
 .prev_and_next{
     font-size: 14px;
@@ -1145,13 +623,30 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
     margin-left:10px;
     font-size: 12px;
 }
+.tag_list {
+    float: left;
+    position: relative;
+    width: 523px;
+}
+.tag_list ul li a {
+    color: #3399cc;
+    padding-left: 1em;
+}
+.tag_cloud {
+    float: right;
+    position: relative;
+    margin: 0 12px 0 0;
+    width: 240px;
+}
+.tag_cloud a:hover {
+    color:#333333;
+}
 
 .douban-list ul li {
     width: 80px;
     float: left;
     list-style: none outside none;
 }
-
 .douban-list ul li img {
     width: 70px;
     height: 100px;
@@ -1161,12 +656,10 @@ ol.comment-list li .comment-reply a:hover,.respond .cancel-comment-reply a:hover
 .instagram {
     margin-top: 5px;
 }
-
 .instagram ul li {
     float: left;
     list-style: none outside none;
 }
-
 .instagram ul li img {
     border: solid 1px #DDD;
 }
