--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,4 +3,12 @@
 				<a id="gotop" href="javascript:void(0);" onclick="return false;">TOP</a>
                 <div id="copyright">&copy; 2014 popfeng | Power by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a href="https://github.com/popfeng" target="_blank">Github</a> on <a href="http://cubieboard.org" target="_blank">CubieTruck</a> | Design from <a href="http://blog.ixxoo.me" target="_blank">likebeta</a></div>
 			</div>
+            <script>
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+                ga('create', 'UA-49883598-1', 'bikethru.com');
+                ga('send', 'pageview');
+            </script>
 		</footer>
