--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer id="footer">
     <div class="foot">
         <a id="gotop" href="javascript:void(0);" onclick="return false;">TOP</a>
-        <div id="copyright">&copy; 2014 popfeng | Power by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a href="https://github.com/popfeng" target="_blank">Github</a> on <a href="http://cubieboard.org" target="_blank">CubieTruck</a> | Design from <a href="http://blog.ixxoo.me" target="_blank">likebeta</a></div>
+        <div id="copyright">&copy; 2014 popfeng | Power by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a href="https://github.com/popfeng" target="_blank">Github</a> on <a href="http://cubieboard.org" target="_blank">CubieTruck</a></div>
     </div>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
