Update: change jquery script path.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@
         <!--[if lt IE 9]>
         <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-        <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.0/jquery.min.js"></script>
+        <script type="text/javascript" src="{{site.url}}/media/js/jquery-2.1.0.min.js"></script>
         <script type="text/javascript" src="{{site.url}}/media/js/base.js"></script>
     </head>
     <body>
