Update: 去掉 PHOTO 一栏

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 			</header>
             <nav id="nav">
                 <span><a href="{{site.url}}/read">Read</a></span>
-                <span><a href="{{site.url}}/photo">Photo</a></span>
+                <!--span><a href="{{site.url}}/photo">Photo</a></span-->
                 <span><a href="{{site.url}}/tags">Tags</a></span>
                 <span><a href="{{site.url}}/guestbook">Guestbook</a></span>
                 <span><a href="{{site.url}}/about">About</a></span>
